--- a/2_CSS/04_CSS선택자4.html
+++ b/2_CSS/04_CSS선택자4.html
@@ -8,11 +8,11 @@
     <link href="./css/selector4.css" rel="stylesheet"> 
 </head>
 <body>
-    <h2>일반 구조 선택자</h2>
+  <h2>일반 구조 선택자</h2> <!-- 해석 순서 잘 알아놓기 -->
+
   <pre>
     형제 관계에 있는 요소 중 특정 요소를 선택하는 선택자
     위치를 기준으로 구분함(중요)
-
     :first-child
     :last-child
     :nth-child(수열)
